cv update spring 2025

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -29,71 +29,49 @@
 \begin{document}
 \makecvtitle
 \section{Education}
-\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.80}{Thesis on Deep Learning and Human Memory.}
-\cventry{2015 -- 2019}{Bachelor of Arts in Economics and Physics}{Washington University in St. Louis}{ St. Louis, MO}{\linebreak GPA: 3.41}{Minor in the Philosophy of Science}
+\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{}{Thesis on Deep Learning and Human Memory.}
+\cventry{2015 -- 2019}{Bachelor of Arts in Economics and Physics}{Washington University in St. Louis}{ St. Louis, MO}{}{Minor in the Philosophy of Science}
 
 \section{Experience}
 
-\cventry{2023 --}{Freelance Researcher}{University of Chicago, Department of Psychology}{Chicago, IL}{}{Built apparatus for data gathering on older adults and people with mild cognitive impairments with David Gallo. Developing a novel approach using deep learning for estimating auditory memorability with Wilma A. Bainbridge. }
+\cventry{2023 --}{Audio Data Lead / Data Engineering}{Reality Defender, Inc.}{New York, NY}{}{Built scaleable tools for the AI model development cycle, designed for the specific needs of Deepfake Detection models. Designed and implemented dataset pathways for a rapidly growing, research and development orientated startup. Worked directly with AI scientists both implementing tools for them to execute research projects more quickly and provide more information for the research iteration process. Worked with scientists to build novel, research-driven and domain-focused analytics tooling for improving production models based on cutting edge machine learning theory. Served as technical lead during zero-to-one development on a generalized Audio-AI research pipeline. Specifics include:
+\begin{itemize}
+  \item Took on the lead role for the organization's dataset management and model develoment pipeline. Scaled the organization's research and development operation from training on datasets with hundreds of hours of data to hundreds of thousands of hours of data and beyond.
+    \begin{itemize}
+      \item Built a scaleable, asynchronous pipeline for generating voice clones from arbitrary audio across all commercial platforms, utilizing functional and type-driven programming techniques to minimize the labor cost of implementing new AI features.
+      \item Designed and implemented a cloud-native framework for scaling and deploying content generation models and AI-powered analysis tools across different modalities and techniques. Designed with experimental models in mind, for rapid research on detection effectiveness, and if needed, rapid training and deployment of updated model checkpoints.
+    \end{itemize}
+  \item Directed and established a pipeline and process for evaluating the impact of focused dataset expansions and model architecture improvements.
+    \begin{itemize}
+      \item Directed the use of internal data science and engineering tooling for product deployments, ensuring that all models are tested in-situ on unseen data before and after deployment. These tools and processes ensured client trust in deployments to high-cybersecurity environments.
+      \item Using the information from these evaluations, synthesized and executed plans for improving the training set using data procurement, augmentation, and the implementation of additional generative models.
+      \item This process resulted in the rapid improvement of the audio detection model from the low 80\% accuracy range on public benchmarks to the 95\%+ accuracy range. This led to the company winning client proof-of-value competitions consistently, and after implementing this process, the company won first place in the ASVSpoof 5 single-model competition.
+    \end{itemize}
+  \item Overhauled the research team's audio preprocessing pipeline from a collection of single threaded scripts to a highly modular and cloud-level parallelized system of serverless microservices, enabling research scientists to perform augmentation experiments at terabyte-scale, just by providing simple python functions. Coupled with a friendly interface, this also improved the real-world speed of the research-to-production iteration loop from taking months to weeks.
+  \item Developed a novel, computational-linguistics-driven approach to Answering Machine Detection.
+  \item Developed a novel approach to analyzing the real-world representativeness of an arbitrary dataset, leveraging information theoretic tools and high dimensional embedding spaces.
+  \item Designed and Implemented a tool for scaling and automating the simulation of phone calls at scale for research and production AI-model training and evaluation.
+  \item Built and Maintained an internal knowledge-base for the organization's datasets, model iterations, production systems, and known deepfake generation tools. Designed socio-technical integrations with the knowledge-base to ensure project visibility and provide semi-automated "sanity checks" throughout the research pipeline.
+  \item Oversaw the work of other Data Engineers, from designing and executing crowdsourcing studies, to implementing internal research tooling, to scaling novel data augmentations for research and development.
+\end{itemize}}
 
-\cventry{2022 --}{Predoctoral Researcher}{\href{https://css.seas.upenn.edu/}{Computational Social Science, University of Pennsylvania}}{Philadelphia, PA}{}{Researched topics relating to the News, especially how the apparent "Speed of News" has been increasing. Developed the \textit{Living Journal Toolkit}, a collection of tools for publishing live updating dashboards associated with papers, blog posts using a novel statistical and visualization package, and interactive papers. Developed the \textit{News Observatory}, a system for monitoring news websites and collecting analyzable data about their publication behavior.}
+\cventry{2023}{Freelance Researcher / Research Engineer}{University of Chicago, Department of Psychology}{Chicago, IL}{}{Developed a novel approach using deep learning for estimating auditory memorability with Wilma A. Bainbridge. Built large scale training tools for this purpose to reduce the Lab's iteration time, decrease compute costs, and execute modern AutoML practices.}
 
-\cventry{2021 -- 2022}{Predoctoral Researcher}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising. Teaching assistant for the MSR NYC Data Science Summer School.}
+\cventry{2022 -- 2023 }{Predoctoral Researcher / Research Engineer}{\href{https://css.seas.upenn.edu/}{Computational Social Science, University of Pennsylvania}}{Philadelphia, PA}{}{Researched topics relating to the News, especially how the apparent "Speed of News" has been increasing. Developed the \textit{Living Journal Toolkit}, a collection of tools for publishing live updating dashboards associated with papers, blog posts using a novel statistical and visualization package, and interactive papers. Developed the \textit{News Observatory}, a scaled, cloud-native system for monitoring news websites live and collecting analyzable data about their publication behavior.}
+
+\cventry{2021 -- 2022}{Predoctoral Researcher / Research Engineer}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising. Teaching assistant for the MSR NYC Data Science Summer School. Built custom analysis and modeling tools to fit researchers' specific mathematical theories about marketing, the news cycle, and perceptions of bias.}
 
 \cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Developed \textit{ResMem}, a novel deep-learning based model to estimate the memorability of images. With Prof. Wilma A. Bainbridge.}
 
-\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains. With Prof. David Gallo.}
-
-\cventry{2019}{Freelance Data Scientist}{Upwork}{ St. Louis, MO and Chicago, IL}{}{Offered freelance data analysis services to companies. Projects include building systems for automatic time-series analysis, data visualization and analysis, natural language processing analysis of surveys, and consulting on larger projects.
-\textbf{Jobs Include:}
-\begin{itemize}
-\item Interviewing Potential Full-Time Data Scientists
-\item Building Statistical Learning Tools
-\item Natural Language Processing Analysis
-\item Machine Learning Development and Deployment
-\end{itemize}}
-
-\cventry{2018}{Programmer/Data Scientist (Internship)}{Washington University in St. Louis: Alumni and Development}{\linebreak St. Louis, MO}{}{Continued development of previous non-scientific automation. Created new data models for donor identification. Other data analysis and visualization projects.}
-
-\cventry{2017}{Real Estate Analyst (Internship)}{Kairos Investment Management}{Rancho Santa Margarita, CA}{}{Wrote automation programs for data processing, and constructed a model for optimal rent estimation. Built data mining programs for continued use by analysts.}
-
-\cventry{2016 -- 2017}{Economics Simulation Programmer}{Washington University in St. Louis: Department of Economics}{\linebreak St. Louis, MO}{}{Built macroeconomic simulations for teaching of Economics 4121. Wrote simulations in Mathematica for the ISLMFE model, the Solow-Swan model, and permutations thereof.}
-
-\section{Selected Projects}
-
-\cventry{2023 -- }{ResMemVox}{}{}{}{Using deep learning techniques to estimate the memorability of audio snippets.}
-
-\cventry{2022 -- }{News Observatory}{}{}{}{Using cloud computing, optical character recognition, networking techniques, and other mixed methods to create an ongoing dataset of news website publications.}
-
-\cventry{2022 -- }{Living Journal}{}{}{}{Using Hugo, D3.JS and JQuery to create a framework for fast publication of interactive and live-updating social scientific analyses.}
-
-\cventry{2021 -- 2022}{Conversion Journeys}{}{}{}{Using natural language processing techniques on behavioral data to examine how consumers are converted to purchasing particular durable goods.}
-
-\cventry{2021 -- 2022}{Project Ratio: Framing}{}{}{}{A project in collaboration with Project Ratio: examining how we perceive modern news media.}
-
-\cventry{2021 --}{Speed of News}{}{}{}{Using data from the wayback machine and archive.org, this is a project focused on examining how major publishers publication behavior has changed over time. This is especially focused on the concept of the 24-hour news cycle, and how internet news delivery differs from print media.}
-
-\cventry{2021}{\href{https://www.coeneedell.com/post/gammatones}{High Speed Gammatone Cepstral Decomposition}}{}{}{}{Connected to Ongaku, an implementation of the gammatone cepstral decomposition for OpenCL. This would allow it's use in real time applications or large scale machine learning pipelines.}
-
-\cventry{2020 -- 2021}{\href{https://www.coeneedell.com/project/memnet/}{Deep Learning and Computer Vision for Memorability}}{}{}{}{A project to create a better computer vision model for predicting the memorability of an image. This started with investigating the current standard MemNet, and has moved beyond into developing new models including the now completed \textit{ResMem}.}
-
-\cventry{2020}{\href{https://www.coeneedell.com/project/computational_patahistory/}{Computational Rupahistory}}{}{}{}{An ongoing side project to see how agent based simulations of territory-controlling groups interact in a simulated world. Currently on the back-burner, though some progress has been made in creating a cellular automata to generate a world map on a hex-grid.}
-
-\cventry{2020}{\href{https://www.coeneedell.com/project/bandcamp_analysis/}{Bandcamp Album Covers}}{}{}{}{A project to investigate how indie musicians use visual signs to indicate their subgenre. Leverages Natural Language Processing techniques like Latent Dirichlet Allocation to analyze color usage in album cover images.}
-
-\cventry{2019 -- 2020}{\href{https://www.coeneedell.com/project/ongaku/}{Ongaku}}{}{}{}{A system for creating musical playlists based on feature analysis. Leverages gammatone cepstral coefficients (a system for mimicking neural signals from the ear to the brain) and manifold learning techniques to create a psuedo-euclidean space for musical tracks. Shapes in the song-space can then be drawn to define playlists.}
-
-\cventry{2019}{\href{https://www.coeneedell.com/project/fluxx-for-robots/}{Fluxx for Robots}}{}{}{}{An Artifical Intelligence Learning environment for the tabletop card-game Fluxx by Looney Labs. Has both a human-motivated interface and a machine-motivated interface. Intended for research on machine learning methods for complex and incomplete-information games.}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JavaScript, the tooling was used for studies on prolific and a selection of older adults through a partnership with Rush University. The apparatus was designed to evaluate the participants' cognitive state and possibly diagnose Mild Cognitive Impairment. With Prof. David Gallo.}
 
 \section{Publications}
 
+\cventry{2025}{Search conversion journeys and the missed opportunity of associated keywords}{}{\linebreak David Rothschild, Coen D. Needell, Joe Veverka, Elad Yom-Tov}{\textit{Frontiers in Communications}}{Published}
+
+\cventry{2024}{Framing in the Presence of Supporting Data: A Case Study in U.S. Economic News}{}{\linebreak Alexandria Leto, Elliot Pickens, Coen D. Needell, David Rothschild, Maria Leonor Pacheco}{\textit{Association for Computational Linguistics}}{Published}
+
 \cventry{2023}{Mainstream Media Producing and Distributing Misinformation Through Stenography and ``Opinions''}{}{\linebreak David Rothschild, Elliot E. Pickens, Tin Orešković, Katelyn Morrison, Markus Mobius, Coen D. Needell, Jared Katzman, Duncan J. Watts}{}{Forthcoming}
-
-\cventry{2023}{Modeling Framing in News Coverage about the U.S. Economy}{}{\linebreak Maria Leonor Pacheco, Coen D. Needell, Elliot E. Pickens, David Rothschild}{}{Forthcoming}
-
-\cventry{2023}{The News Observatory: A collection and Storage System for Past and Future News Media Content}{}{\linebreak Coen D. Needell, Elliot E. Pickens, David Rothschild}{}{Forthcoming}
-
-\cventry{2023}{Search Conversion Journeys and Efficient Advertising Opportunities}{}{\linebreak Coen D. Needell, David Rothschild}{\textit{Marketing Science}}{Submitted}
 
 \cventry{2021}{\href{https://doi.org/10.1007/s42113-022-00126-5}{Embracing New Techniques in Deep Learning for Estimating
 Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{Computational Brain \& Behavior}}{Published}
@@ -115,7 +93,9 @@ Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{
 	Network Analysis & Statistics and Statistical Learning & Deep Learning \\
 	Cloud Computing & Web Development & Unix \\
 	Data Visualization & Data Scraping & Philosophy of Science \\
-	Econometric Models & Systems Analysis & Advanced Mathematics
+	Econometric Models & Systems Analysis & Advanced Mathematics \\
+  Functional Programming & Systems Design & Data Engineering \\
+  Technical Leadership & Project Management & Human-Computer Interaction
 \end{tabularx}
 
 \section{Languages, Packages, and Frameworks}
@@ -123,12 +103,13 @@ Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{
 \raggedleft
 \begin{tabularx}{.9\textwidth}{>{\center\arraybackslash}X >{\center\arraybackslash}X >{\center\arraybackslash}X}
 Python & JavaScript & Julia \\
-R & Stata & Mathematica \\
 NLTK & PyTorch & Sci-kit Learn \\
 SciPy & Numpy & Pandas \\
 D3.js & MatPlotLib & ggplot2 \\
 Linux & Rust & OpenCL \\
   SQL & AWS & Kubernetes \\
+  Polars & Postgres & Databricks \\
+  Terraform & Docker & Spark
 
 \end{tabularx}
 \end{document}
