cv update spring 2025

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -34,7 +34,7 @@
 
 \section{Experience}
 
-\cventry{2023 --}{Audio Data Lead / Data Engineering}{Reality Defender, Inc.}{New York, NY}{}{Built scaleable tools for the AI model development cycle, designed for the specific needs of Deepfake Detection models. Designed and implemented dataset pathways for a rapidly growing, research and development orientated startup. Worked directly with AI scientists both implementing tools for them to execute research projects more quickly and provide more information for the research iteration process. Worked with scientists to build novel, research-driven and domain-focused analytics tooling for improving production models based on cutting edge machine learning theory. Served as technical lead during zero-to-one development on a generalized Audio-AI research pipeline. Specifics include:
+\cventry{2023 --}{Audio Data Lead -- Data Engineering}{Reality Defender, Inc.}{New York, NY}{}{Built scaleable tools for the AI model development cycle, designed for the specific needs of Deepfake Detection models. Designed and implemented dataset pathways for a rapidly growing, research and development orientated startup. Worked directly with AI scientists both implementing tools for them to execute research projects more quickly and provide more information for the research iteration process. Worked with scientists to build novel, research-driven and domain-focused analytics tooling for improving production models based on cutting edge machine learning theory. Served as technical lead during zero-to-one development on a generalized Audio-AI research pipeline. Specifics include:
 \begin{itemize}
   \item Took on the lead role for the organization's dataset management and model develoment pipeline. Scaled the organization's research and development operation from training on datasets with hundreds of hours of data to hundreds of thousands of hours of data and beyond.
     \begin{itemize}
